# medspacy-no

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  DECISIONS.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_SOURCES.md  findings.md  pyproject.toml  status.md
.github/workflows/: ci.yml
data/owner_review/: context_rule_candidates.tsv
docs/: IDEAS.md  LANDSCAPE.md  P1_OWNER_REVIEW.md  PERMISSION-EMAIL.md  PLAN.md  RESEARCH.md  SEEDS.md  SOURCES.md  THOUGHTS.md
resources/nb/: abbreviations.txt  rush_rules.tsv
scripts/: check_owner_review.py  check_release_ready.py  validate_resources.py
src/medspacy_no/: __init__.py  _loader.py  tokenizer.py  validation.py
src/medspacy_no/resources/nb/: context_rules.json  section_patterns.json
tests/: test_loader.py  test_owner_review.py  test_packaging.py  test_release_ready.py  test_resources.py  test_tokenizer.py
